# fancontrol

./: .gitignore  CMakeLists.txt  amdgpu-fan-control.kdev4  fancontrol.kdev4
.kdev4/: amdgpu-fan-control.kdev4  fancontrol.kdev4
prototypes/: read-test.cpp  write-test.cpp
src/: logger.h.old  logger2.cpp  logger2.h  main.cpp  pwm_actuator.cpp  pwm_actuator.h  pwm_actuator_factory.cpp  pwm_actuator_factory.h  pwm_controller.cpp  pwm_controller.h  pwm_controllers.cpp  pwm_controllers.h  runtime_config.cpp  runtime_config.h  temp_sensor.cpp  temp_sensor.h  temp_sensor_factory.cpp  temp_sensor_factory.h  types.h
src/config/: config.cpp  config.h  config_option.cpp  config_option.h  controller_config.cpp  controller_config.h
src/control/: pwm_controller.cpp  pwm_controller.h  pwm_controllers.cpp  pwm_controllers.h
src/hal/: pwm_actuator.cpp  pwm_actuator.h  pwm_actuator_factory.cpp  pwm_actuator_factory.h  temp_sensor.cpp  temp_sensor.h  temp_sensor_factory.cpp  temp_sensor_factory.h
src/logging/: logger.cpp.old  logger2.cpp  logger2.h
